fix: add text alignment to navbar for improved UX

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,6 +81,10 @@ nav a.nav-link:focus {
   color: var(--teal-500);
 }
 
+.navbar-nav {
+  text-align: right;
+}
+
 /* Footer */
 
 footer {
